# asktube

./: .gitignore  LICENSE  README.md  build.local.aarch64.sh  build.local.amd64.sh  build.local.bat  build.local.sh  build.local.x86.sh  build.sh
backend/: .gitignore  pyproject.toml
backend/backend/: .env  .env.sample  .gitignore  constants.py  env.py  server.py
backend/backend/assistants/: constants.py  logger.py  prompts.py
backend/backend/db/: models.py  specs.py
backend/backend/error/: ai_error.py  ai_service_error.py  base.py  video_error.py
backend/backend/services/: ai_service.py  video_service.py  youtube_service.py
backend/backend/utils/: logger.py  prompts.py
backend/src/: constants.py  env.py  server.py
backend/src/db/: models.py  specs.py
backend/src/error/: base.py
backend/src/services/: youtube_service.py
backend/src/utils/: logger.py
compose/: free.yaml  ideal.yaml  local.yaml
compose/local/: compose.yaml
docs/: FQA.md
engine/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
engine/engine/: .env.sample  cors.py  server.py
engine/engine/assistants/: constants.py  env.py  errors.py  logger.py  prompts.py
engine/engine/database/: models.py  specs.py
engine/engine/filters/: audio_filter.py
engine/engine/processors/: audio_processor.py
engine/engine/services/: __init__.py  ai_service.py  chat_service.py  video_service.py  youtube_service.py
engine/engine/supports/: constants.py  env.py  errors.py  logger.py  prompts.py  utils.py
web/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  app.vue  build.sh  bun.lockb  nuxt.config.ts  package.json  tailwind.config.js
web/assets/css/: global.css  tailwind.css
web/layouts/: default.vue
web/pages/: Test.vue  discover.vue  index.vue  process.vue
web/pages/chat/: [id].vue
web/plugins/: config.ts  vue3-toastify.ts
web/supports/: request.js  settings.js
