[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jonas <tuyendev@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
