[tool.poetry]
name = "engine"
version = "0.1.2"
description = "Engine to handle application logic"
authors = ["Jonas <me@ifelse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^24.6.0"
pytubefix = "^6.15.1"
audio-extract = "^0.6.0"
peewee = "^3.17.6"
ujson = "^5.10.0"
chromadb = "^0.5.5"
faster-whisper = "^1.0.3"
jinja2 = "^3.1.4"
google-generativeai = "^0.7.2"
python-dotenv = "^1.0.1"
openai = "^1.43.0"
python-iso639 = "^2024.4.27"
voyageai = "^0.2.3"
anthropic = "^0.34.2"
sentence-transformers = "^3.0.1"
tiktoken = "^0.7.0"
lingua-language-detector = "^2.0.2"
latest-user-agents = "^0.0.4"
urllib3 = "^2.2.2"
mistralai = "^1.0.3"
ollama = "^0.3.2"
noisereduce = "^3.0.2"
pydub = "^0.25.1"
torch = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
