[tool.poetry]
authors = ["Jonas <me@ifelse.com>"]
description = "Engine to handle application logic"
name = "engine"
readme = "README.md"
version = "0.1.3"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.34.2"
assemblyai = "^0.33.0"
audio-extract = "^0.6.0"
chromadb = "^0.5.5"
faster-whisper = "^1.0.3"
google-generativeai = "^0.7.2"
jinja2 = "^3.1.4"
latest-user-agents = "^0.0.4"
lingua-language-detector = "^2.0.2"
mistralai = "^1.0.3"
noisereduce = "^3.0.2"
ollama = "^0.3.2"
openai = "^1.43.0"
peewee = "^3.17.6"
pydub = "^0.25.1"
python-dotenv = "^1.0.1"
python-iso639 = "^2024.4.27"
pytubefix = "^6.16.2"
sanic = "^24.6.0"
sentence-transformers = "^3.0.1"
tiktoken = "^0.7.0"
ujson = "^5.10.0"
urllib3 = "^2.2.2"
voyageai = "^0.2.3"
torch = "^2.4.1"
retry2 = "^0.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
