[tool.poetry]
authors = ["Jonas <me@ifelse.com>"]
description = "Engine to handle application logic"
name = "engine"
readme = "README.md"
version = "v0.2.5"

[tool.poetry.dependencies]
anthropic = "^0.34.2"
assemblyai = "^0.33.0"
audio-extract = "^0.6.0"
chromadb = "^0.5.7"
faster-whisper = "^1.0.3"
google-generativeai = "^0.8.1"
jinja2 = "^3.1.4"
latest-user-agents = "^0.0.4"
mistralai = "^1.1.0"
noisereduce = "^3.0.2"
numba = "^0.60.0"
ollama = "^0.3.3"
openai = "^1.46.1"
peewee = "^3.17.6"
protobuf = "3.20.3"
pydub = "^0.25.1"
python = "^3.10"
python-dotenv = "^1.0.1"
python-iso639 = "^2024.4.27"
pytubefix = "^6.16.3"
retry2 = "^0.9.5"
sanic = "^24.6.0"
sanic-cors = "^2.2.0"
sentence-transformers = "^3.1.1"
tiktoken = "^0.7.0"
torch = "^2.4.1"
ujson = "^5.10.0"
urllib3 = "^2.2.3"
voyageai = "^0.2.3"
librosa = "^0.10.2.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
